text layout to fix overlaping

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 .label {
-  font: 1.25rem "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 1.15rem "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-anchor: middle;
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
